test(web-apis): mocks canvas-api and video-api

--- a/core/web-apis/package.json
+++ b/core/web-apis/package.json
@@ -8,6 +8,9 @@
 		".": {
 			"import": "./@bundler/dist/index.js",
 			"require": "./@bundler/dist/index.umd.cjs"
+		},
+		"./mocks": {
+			"import": "./@test/vitest/mocks/index.ts"
 		}
 	},
 	"version": "1.0.0",
