--- a/micro-services/package.json
+++ b/micro-services/package.json
@@ -39,6 +39,7 @@
 		"test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
 	},
 	"dependencies": {
+		"@windows98/web-apis": "workspace:*",
 		"qrcode-generator": "2.0.4"
 	}
 }
