--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,7 +5,7 @@ packages:
   - core/design-system
   - core/internationalization/*
   - core/toolkit
-  - core/web-apis
+  - core/web
   - docs
   - micro-frontends
   - micro-services
