feat(web): install workspace toolkit

--- a/core/web/package.json
+++ b/core/web/package.json
@@ -24,6 +24,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@windows98/configs": "workspace:*",
+		"@windows98/toolkit": "workspace:*",
 		"lint-staged": "16.1.6",
 		"typescript": "5.9.2",
 		"vite": "7.1.5",
