update(all): pnpm 10.16.1 -> 10.25.0

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"homepage": "https://github.com/arkadiuszPasciak/windows98#readme",
 	"engines": {
 		"node": "22.21.1",
-		"pnpm": "10.16.1"
+		"pnpm": "10.25.0"
 	},
 	"scripts": {
 		"prepare": "husky install && pnpm run --filter @windows98/ci-cd build"
@@ -19,5 +19,5 @@
 		"@biomejs/biome": "1.9.4",
 		"husky": "8.0.3"
 	},
-	"packageManager": "pnpm@10.16.1"
+	"packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501"
 }
