--- a/core/configs/src/biome/shared.config.json
+++ b/core/configs/src/biome/shared.config.json
@@ -1,7 +1,14 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
 	"files": {
-		"ignore": [".cache", "build", "dist", "node_modules", "test-results"]
+		"includes": [
+			"**",
+			"!**/.cache",
+			"!**/build",
+			"!**/dist",
+			"!**/node_modules",
+			"!**/test-results"
+		]
 	},
 	"formatter": {
 		"attributePosition": "multiline",
@@ -10,9 +17,7 @@
 		"indentWidth": 2,
 		"formatWithErrors": true
 	},
-	"organizeImports": {
-		"enabled": true
-	},
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
 		"rules": {
