--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -11,7 +11,9 @@
 	"main": "@bundler/dist/index.umd.cjs",
 	"module": "@bundler/dist/index.js",
 	"types": "@bundler/dist/index.d.ts",
-	"files": ["@bundler/dist"],
+	"files": [
+		"@bundler/dist"
+	],
 	"exports": {
 		".": {
 			"import": "./@bundler/dist/index.js",
@@ -40,7 +42,7 @@
 		"react-dom": "19.2.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "2.3.8",
 		"@playwright/experimental-ct-react": "1.57.0",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
