--- a/micro-frontends/package.json
+++ b/micro-frontends/package.json
@@ -3,7 +3,9 @@
 	"main": "@bundler/dist/index.umd.cjs",
 	"module": "@bundler/dist/index.js",
 	"types": "@bundler/dist/index.d.ts",
-	"files": ["@bundler/dist"],
+	"files": [
+		"@bundler/dist"
+	],
 	"exports": {
 		".": {
 			"import": "./@bundler/dist/index.js",
@@ -28,7 +30,7 @@
 		"@types/react-dom": "19.2.3",
 		"@windows98/configs": "workspace:*",
 		"@windows98/toolkit": "workspace:*",
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "2.3.8",
 		"lint-staged": "16.2.7",
 		"stylelint": "16.26.1",
 		"typescript": "5.9.3",
