--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
 		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
 		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/bundles/**/*.css\" --fix --allow-empty-input",
 		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/bundles/**/*.css\" --allow-empty-input",
-		"lint:types:run": "tsc"
+		"lint:types:run": "tsc",
+		"migrate": "biome migrate"
 	},
 	"dependencies": {
 		"@windows98/configs": "workspace:*",
@@ -32,7 +33,7 @@
 		"react-i18next": "16.4.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "2.3.8",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
 		"@vitejs/plugin-react": "5.1.2",
