--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
 		"@windows98/configs": "workspace:*",
+		"@windows98/web": "workspace:*",
 		"lint-staged": "16.2.7",
 		"typescript": "5.9.3",
 		"vitest": "4.0.15"
